--- a/booksOnMongoDB/package.json
+++ b/booksOnMongoDB/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "ajv": "^8.6.3",
+    "ajv-formats": "^2.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "deep-freeze": "0.0.1",
